<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".YouXiActivity">

    <ImageView
        android:id="@+id/iv_jinbi"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="18dp"
        android:background="@drawable/jinbi"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/tv_jinBi"
        android:layout_width="50dp"
        android:layout_height="18dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape"
        android:gravity="center_horizontal" />
    <TextView
        android:id="@+id/jinbishu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_jinBi_label"
        android:textSize="14sp"
        android:layout_marginStart="57dp"
        android:layout_marginEnd="57dp"
        android:layout_marginTop="9dp"/>

    <ImageView
        android:id="@+id/iv_jifen"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="125dp"
        android:background="@drawable/jifenbeijing"
        android:contentDescription="@string/app_name" />
    <TextView
        android:id="@+id/tv_jiFen"
        android:background="@drawable/shape"
        android:layout_width="50dp"
        android:layout_height="18dp"
        android:layout_marginStart="145dp"
        android:layout_marginEnd="145dp"
        android:layout_marginLeft="180dp"
        android:layout_marginRight="180dp"
        android:layout_marginTop="10dp" />
    <TextView
        android:id="@+id/jifenshu"
        android:text="@string/tv_jifenshu_label"
        android:textSize="14sp"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="160dp"
        android:layout_marginTop="9dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="368dp"
        android:layout_height="350dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="150dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/beijing3"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="127dp" />
    <TextView
        android:id="@+id/tv_tiShi"
        android:text="@string/tv_tiShi_label"
        android:textSize="20sp"
        android:layout_marginEnd="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="420dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_buShu"
        android:text="@string/tv_buShu_label"
        android:gravity="center"
        android:textSize="35sp"
        android:layout_marginTop="450dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
           android:id="@+id/btn_zhishaizi"
          android:layout_weight="1"
           android:text="@string/btn_zhishaizi_label"
           android:textSize="20sp"
            android:onClick="btnAdd1"
           android:layout_marginTop="500dp"
           android:layout_width="300dp"
           android:layout_height="50dp" />
        <Button
            android:id="@+id/btn_start_game"
            android:text="@string/btn_start_game_label"
            android:textSize="20sp"
            android:layout_marginTop="500dp"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:onClick="btnAdd2"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_joke"
            android:text="@string/btn_joke_label"
            android:textSize="20sp"
            android:layout_marginTop="500dp"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:onClick="btnAdd2"
            android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout> 