<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/laochuangzhang2"
    android:orientation="vertical"
    tools:context=".DengLuActivity">

    <Button
        android:id="@+id/btn2"
        android:layout_width="280dp"
        android:layout_height="32dp"
        android:layout_marginEnd="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginRight="75dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="255dp"
        android:background="#673ab7"
        android:text="@string/btn2_label"
        android:textColor="#ffffff" />
    <EditText
        android:id="@+id/editText"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginRight="75dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:hint="@string/passWord_hint"
        android:textColorHint="#212121"
        android:inputType="textPassword"
        android:textColor="#ffffff"
        android:selectAllOnFocus="false"
        android:singleLine="false" />
    <EditText
        android:id="@+id/editText3"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginRight="75dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="130dp"
        android:ems="10"
        android:hint="@string/userName_hint"
        android:textColorHint="#212121"
        android:inputType="textPersonName"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_below="@id/btn2"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="75dp"
        android:background="@android:color/transparent"
        android:text="@string/btn3_label"
        android:textAllCaps="false"
        android:textColor="#0066FF"
        android:textSize="12sp"
        android:typeface="normal" />
    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginStart="250dp"
        android:layout_marginLeft="200dp"
        android:layout_marginRight="200dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/btn2"
        android:background="@android:color/transparent"
        android:text="@string/btn4_label"
        android:textAllCaps="false"
        android:textColor="#0066FF"
        android:textSize="12sp"
        android:typeface="normal" />
</RelativeLayout>